// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories: (categorizeByGroup=false) should render category TOC' 1`] = `
"## Index

### CategoryA

- [CategoryInterfaceA1](API.md#categoryinterfacea1)
- [CategoryInterfaceA2](API.md#categoryinterfacea2)
- [categoryVariableA1](API.md#categoryvariablea1)
- [categoryVariableA2](API.md#categoryvariablea2)
- [categoryFunctionA1](API.md#categoryfunctiona1)
- [categoryFunctionA2](API.md#categoryfunctiona2)
- [categoryFunctionA3](API.md#categoryfunctiona3)

### CategoryB

- [categoryVariableB1](API.md#categoryvariableb1)
- [categoryFunctionB2](API.md#categoryfunctionb2)

### Other

- [OtherInterfaceA](API.md#otherinterfacea)
- [otherVariableA](API.md#othervariablea)
- [otherVariableB](API.md#othervariableb)
- [otherFunctionA](API.md#otherfunctiona)
- [otherFunctionB](API.md#otherfunctionb)
"
`;

exports[`Categories: (categorizeByGroup=false) should render category members' 1`] = `
"## CategoryA

### CategoryInterfaceA1

[partial: reflectionMember]



---

### CategoryInterfaceA2

[partial: reflectionMember]



---

### categoryVariableA1

[partial: declarationMember]



---

### categoryVariableA2

[partial: declarationMember]



---

### categoryFunctionA1()

[partial: signatureMember]



---

### categoryFunctionA2()

[partial: signatureMember]



---

### categoryFunctionA3()

[partial: signatureMember]

## CategoryB

### categoryVariableB1

[partial: declarationMember]



---

### categoryFunctionB2()

[partial: signatureMember]

## Other

### OtherInterfaceA

[partial: reflectionMember]



---

### otherVariableA

[partial: declarationMember]



---

### otherVariableB

[partial: declarationMember]



---

### otherFunctionA()

[partial: signatureMember]



---

### otherFunctionB()

[partial: signatureMember]"
`;

exports[`Categories: (excludeGroups=false) should render category TOC' 1`] = `
"## Index

### Interfaces

#### CategoryA

- [CategoryInterfaceA1](API.md#categoryinterfacea1)
- [CategoryInterfaceA2](API.md#categoryinterfacea2)
- [OtherInterfaceA](API.md#otherinterfacea)

#### Other

- [CategoryInterfaceA1](API.md#categoryinterfacea1)
- [CategoryInterfaceA2](API.md#categoryinterfacea2)
- [OtherInterfaceA](API.md#otherinterfacea)

### Variables

#### CategoryA

- [categoryVariableA1](API.md#categoryvariablea1)
- [categoryVariableA2](API.md#categoryvariablea2)
- [categoryVariableB1](API.md#categoryvariableb1)
- [otherVariableA](API.md#othervariablea)
- [otherVariableB](API.md#othervariableb)

#### CategoryB

- [categoryVariableA1](API.md#categoryvariablea1)
- [categoryVariableA2](API.md#categoryvariablea2)
- [categoryVariableB1](API.md#categoryvariableb1)
- [otherVariableA](API.md#othervariablea)
- [otherVariableB](API.md#othervariableb)

#### Other

- [categoryVariableA1](API.md#categoryvariablea1)
- [categoryVariableA2](API.md#categoryvariablea2)
- [categoryVariableB1](API.md#categoryvariableb1)
- [otherVariableA](API.md#othervariablea)
- [otherVariableB](API.md#othervariableb)

### Functions

#### CategoryA

- [categoryFunctionA1](API.md#categoryfunctiona1)
- [categoryFunctionA2](API.md#categoryfunctiona2)
- [categoryFunctionA3](API.md#categoryfunctiona3)
- [categoryFunctionB2](API.md#categoryfunctionb2)
- [otherFunctionA](API.md#otherfunctiona)
- [otherFunctionB](API.md#otherfunctionb)

#### CategoryB

- [categoryFunctionA1](API.md#categoryfunctiona1)
- [categoryFunctionA2](API.md#categoryfunctiona2)
- [categoryFunctionA3](API.md#categoryfunctiona3)
- [categoryFunctionB2](API.md#categoryfunctionb2)
- [otherFunctionA](API.md#otherfunctiona)
- [otherFunctionB](API.md#otherfunctionb)

#### Other

- [categoryFunctionA1](API.md#categoryfunctiona1)
- [categoryFunctionA2](API.md#categoryfunctiona2)
- [categoryFunctionA3](API.md#categoryfunctiona3)
- [categoryFunctionB2](API.md#categoryfunctionb2)
- [otherFunctionA](API.md#otherfunctiona)
- [otherFunctionB](API.md#otherfunctionb)
"
`;

exports[`Categories: (excludeGroups=false) should render category members' 1`] = `
"## Interfaces

### CategoryA

#### CategoryInterfaceA1

[partial: reflectionMember]



---

#### CategoryInterfaceA2

[partial: reflectionMember]

### Other

#### OtherInterfaceA

[partial: reflectionMember]

## Variables

### CategoryA

#### categoryVariableA1

[partial: declarationMember]



---

#### categoryVariableA2

[partial: declarationMember]

### CategoryB

#### categoryVariableB1

[partial: declarationMember]

### Other

#### otherVariableA

[partial: declarationMember]



---

#### otherVariableB

[partial: declarationMember]

## Functions

### CategoryA

#### categoryFunctionA1()

[partial: signatureMember]



---

#### categoryFunctionA2()

[partial: signatureMember]



---

#### categoryFunctionA3()

[partial: signatureMember]

### CategoryB

#### categoryFunctionB2()

[partial: signatureMember]

### Other

#### otherFunctionA()

[partial: signatureMember]



---

#### otherFunctionB()

[partial: signatureMember]"
`;

exports[`Categories: (excludeGroups=true) should render category TOC' 1`] = `
"## Index

### CategoryA

- [CategoryInterfaceA1](API.md#categoryinterfacea1)
- [CategoryInterfaceA2](API.md#categoryinterfacea2)
- [categoryVariableA1](API.md#categoryvariablea1)
- [categoryVariableA2](API.md#categoryvariablea2)
- [categoryFunctionA1](API.md#categoryfunctiona1)
- [categoryFunctionA2](API.md#categoryfunctiona2)
- [categoryFunctionA3](API.md#categoryfunctiona3)

### CategoryB

- [categoryVariableB1](API.md#categoryvariableb1)
- [categoryFunctionB2](API.md#categoryfunctionb2)

### Other

- [OtherInterfaceA](API.md#otherinterfacea)
- [otherVariableA](API.md#othervariablea)
- [otherVariableB](API.md#othervariableb)
- [otherFunctionA](API.md#otherfunctiona)
- [otherFunctionB](API.md#otherfunctionb)
"
`;

exports[`Categories: (excludeGroups=true) should render category members' 1`] = `
"## CategoryA

### CategoryInterfaceA1

[partial: reflectionMember]



---

### CategoryInterfaceA2

[partial: reflectionMember]



---

### categoryVariableA1

[partial: declarationMember]



---

### categoryVariableA2

[partial: declarationMember]



---

### categoryFunctionA1()

[partial: signatureMember]



---

### categoryFunctionA2()

[partial: signatureMember]



---

### categoryFunctionA3()

[partial: signatureMember]

## CategoryB

### categoryVariableB1

[partial: declarationMember]



---

### categoryFunctionB2()

[partial: signatureMember]

## Other

### OtherInterfaceA

[partial: reflectionMember]



---

### otherVariableA

[partial: declarationMember]



---

### otherVariableB

[partial: declarationMember]



---

### otherFunctionA()

[partial: signatureMember]



---

### otherFunctionB()

[partial: signatureMember]"
`;
